# pyw

./: IMPLEMENTATION_SUMMARY.md  README.md  openspec-kac-moody-library.md  pyproject.toml
.trellis/tasks/03-04-quantum-ds-reduction-sl-n-mvp/: task.json
.trellis/workspace/lelouch/: index.md  journal-1.md
demos/: admissible.ipynb  affine_lie_algebra_demo.ipynb
docs/: sl2_boundary_admissible.md
examples/: affine_weight_weyl_reflection_demo.py  quick_start.py  verify_pyw.py  verify_sagemath_fractional.sage
pyw/: __init__.py
pyw/algorithms/: __init__.py  kac_wakimoto_character.py  nilpotent_orbits.py
pyw/core/: __init__.py  affine_lie_algebra.py  affine_weight.py  bruhat.py  character.py  kazhdan_lusztig.py  root_system.py  weight_space.py  weyl_group.py
pyw/embedding/: __init__.py  sl2_triple.py
pyw/fractional/: __init__.py  admissible.py  boundary_admissible.py  level.py  nondegenerate.py  principal.py  translation_conventions.py  verify_sl2_boundary.py
pyw/tests/: __init__.py  conftest.py  test_admissible.py  test_affine_lie_algebra.py  test_affine_weight.py  test_boundary_admissible.py  test_boundary_character.py  test_coweight_conversion.py  test_extended_affine_weyl_group.py  test_fundamental_coweights.py  test_kazhdan_lusztig.py  test_level.py  test_nilpotent_orbits.py  test_nondegenerate.py  test_predicates.py  test_principal.py  test_quantum_ds_reduction.py  test_root_system.py  test_sl2_triple.py  test_weight_space.py  test_weyl_group.py  test_weyl_group_semidirect.py
pyw/utils/: __init__.py  predicates.py  theta_functions.py
pyw/walgebra/: __init__.py  quantum_ds_reduction.py
refs/: [Di Francesco]Conformal Field Theory - Chapter 14 Affine Lie Algebra.md  [Kac, Wakimoto] On rationality of W -algebras.md  [Shan, Xie, Yan] Mirror symmetry for circle compactified 4d N = 2 SCFTs.md  [Yang] W algebra at admissible level.md
